* Vorlesung vom 23. Juni 05
* einige Gleichungen umnummeriert damit ich keine Problem in meinem
  Programm bei der automatischen Nummerierung bekomme -- glX -> eq:Y und
  eq:X mit 38 < X < 200 eine neue Nummer gegeben


git-svn-id: https://svn.lug-jena.de/uni-skripte@108 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -855,13 +855,13 @@ x\in U \exists r>0: K_{r}(x)\subset U$
     $\forall j\in \N$ ist $X = \bigcup_{x\in X} K_{\frac1j}(x)$
     
     Aus \thref{satz:heineborel} $\Longrightarrow$ $\exists$ endliche Teilüberdeckung
-    \begin{gather}\label{gl2}
+    \begin{gather}\label{eq:3}
       (K_{\frac1j}(x_{k}^{j})_{k=1,\ldots,n_{j}}\qquad\forall j\in\N
     \end{gather}
     
     $\Longrightarrow$ $M := \{ x_{k}^{j}: j\in \N, k=1,\ldots,n_{j}\}$ $M$
     ist abzählbar und dicht in $X$: $x\in X, \epsilon>0$ wähle
-    $j>\frac1{\epsilon}$ Aus \autoref{gl2} folgt $\exists k$ mit $x\in
+    $j>\frac1{\epsilon}$ Aus \autoref{eq:3} folgt $\exists k$ mit $x\in
     K_{\frac1j}(x_{k}^{j}) \Longrightarrow d(x,x_{k}^{j})<\epsilon$
     $\Longrightarrow$ Folgerung
   \end{proof}
@@ -987,7 +987,7 @@ x\in U \exists r>0: K_{r}(x)\subset U$
 \begin{bsp}\label{bsp:1.1.3/2}
   $A\subset l_{1}(\N)$ präkompakt $\Longleftrightarrow$ $A$ beschränkt
   und
-  \begin{gather}\label{gl3}
+  \begin{gather}\label{eq:4}
     \sup_{a\in A}\sum_{j=n}^{\infty}\abs{a_{j}}
        \xrightarrow{n\rightarrow\infty} 0
   \end{gather}
@@ -1042,7 +1042,7 @@ x\in U \exists r>0: K_{r}(x)\subset U$
         \Longrightarrow&
            \sum_{l=1}^{n}\abs{b_{l}^{k}-a_{l}}\qquad\text{konvergent für}
            k\rightarrow\infty\\
-        \intertext{wählen $n$ so dass \autoref{gl3} gilt}\\
+        \intertext{wählen $n$ so dass \autoref{eq:4} gilt}\\
         \Longrightarrow& \sum_{l=1}^{\infty}\abs{b_{l}^{k}-b_{l}^{j}} =
            \underbrace{\sum_{l=1}^{n}\abs{b_{l}^{k}-
              b_{l}^{j}}}_{<\epsilon \text{für} j,k>j_{0}(\epsilon)} +
@@ -1127,7 +1127,7 @@ x\in U \exists r>0: K_{r}(x)\subset U$
     Die Norm $\norm{\cdot}_{E}: E\rightarrow \R$ wiederrum ist eine stetige
     Abbildung, woraus folgt, dass das $\min\Phi(A) = \min\{\norm{\Phi(a)}:
     \norm{a}_{1}=1\}$ existiert und $>0$ sein muss.
-    \begin{gather}\label{eq:3}
+    \begin{gather}\label{eq:5}
        0 < \tilde{c} := \min\Phi(A) = \min\{\norm{\Phi(a)}: \norm{a}_{1}=1\}
     \end{gather}
     Denn aus $\norm{a_{1}x_{1} + \ldots + a_{n}x_{n}}_{E}=0$ folgt, dass
@@ -1139,7 +1139,7 @@ x\in U \exists r>0: K_{r}(x)\subset U$
       \norm{a_{1}x_{1}+\ldots+a_{n}x_{n}}_{E} &= \norm{a}_{1}
       \norm[\bigg]{\frac{a_{1}}{\norm{a}_{1}}x_{1}+\ldots+
       \frac{a_{n}}{\norm{a}_{1}}x_{n}}_{E}\\
-      &\geq \norm{a}_{1}\tilde{c}&&\text{nach \autoref{eq:3}}\\[3ex]
+      &\geq \norm{a}_{1}\tilde{c}&&\text{nach \autoref{eq:5}}\\[3ex]
          \norm{a_{1}} &\leq \frac1{\tilde{c}} \norm{a_{1}x_{1} + \ldots +
          a_{n}x_{n}}
     \end{align*}
@@ -1216,14 +1216,16 @@ x\in U \exists r>0: K_{r}(x)\subset U$
       Es gilt:
       \begin{gather*}
         d := d(x,F) := \inf_{y\in F}\norm{x-y}>0\qquad\text{da $F$ abgeschlossen}\\
-        \text{wählen } y\in F: d\leq \norm{x-y}\leq\frac{3}{2}d\taglabel{gl5}\\
+        \text{wählen } y\in F: d\leq \norm{x-y}\leq\frac{3}{2}d
+           \taglabel{eq:6}\\
         \text{Für } z := \frac{x-y}{\norm{x-y}}\in B \exists x_{i}:
            \norm{z-x_{i}}<\frac12\\
         \Longrightarrow x=y+\norm{x-y}z = \underbrace{y +
            \norm{x-y}x_{i}}_{=\tilde{y}\in F} +\norm{x-y}(z-x_{i})\\
         d \leq \norm{x-\tilde{y}}= \norm{x-y}
            \underbrace{\norm{z-x_{i}}}_{<\frac12} \leq \frac12 \norm{x-y}\\
-        \Longrightarrow \norm{x-y}\geq 2d\qquad\text{Widerspruch zur \autoref{gl5}}
+        \Longrightarrow \norm{x-y}\geq 2d\qquad\text{Widerspruch zur
+           \autoref{eq:6}}
       \end{gather*}
     \end{description}
   \end{proof}
@@ -1581,7 +1583,7 @@ $(X,d)$ metr. Raum, $(E, \norm{\cdot})$ Banachraum, $(B(X,E),
       \underline{Wir zeigen:} $(g_{k})$ ist konvergent in $C(X,E)$.
       
       Es sei $\epsilon>0$. Aus der gleichgradigen Stetigkeit von $A$ folgt:
-      \begin{gather}\label{gl7}
+      \begin{gather}\label{eq:7}
         \exists\delta>0\forall x,x': d(x,x') < \delta \forall j\in \N:
            \abs{g_{j}(x)-g_{j}(x')}<\epsilon
       \end{gather}
@@ -1590,7 +1592,7 @@ $(X,d)$ metr. Raum, $(E, \norm{\cdot})$ Banachraum, $(B(X,E),
       $X$ kompakt $\Longrightarrow$ $\exists n$ und
       $X=\bigcup_{l=1}^{n}K_{\delta}(x_{l})$.\\
       Aus der Konvergenz $g_{j}(x^{l})\rightarrow y_{l}$ folgt:
-      \begin{gather}\label{gl8}
+      \begin{gather}\label{eq:8}
         \exists j(\epsilon)\forall j,k\geq j(\epsilon) \forall
            l=1,\ldots,n: \abs{g_{j}(x^{l})-g_{n}(x^{l})}<\epsilon
       \end{gather}
@@ -1600,11 +1602,11 @@ $(X,d)$ metr. Raum, $(E, \norm{\cdot})$ Banachraum, $(B(X,E),
       \begin{gather*}
         \abs{g_{j}(x)-g_{k}(x)}\leq
            \underbrace{\abs{g_{j}(x) - g_{j}(x_{l})}}_{<\epsilon
-             \text{nach \autoref{gl7}}}
+             \text{nach \autoref{eq:7}}}
            +\underbrace{\abs{g_{j}(x_{l})-g_{k}(x_{l})}}_{<\epsilon
-           \text{nach \autoref{gl8}}}
+           \text{nach \autoref{eq:8}}}
            +\underbrace{\abs{g_{k}(x_{l})- g_{k}(x)}}_{<\epsilon
-           \text{nach \autoref{gl7}}} < 3\epsilon
+           \text{nach \autoref{eq:7}}} < 3\epsilon
       \end{gather*}
       
       $\Longrightarrow$ $\norm{g_{j}-g_{k}}_{\infty}\leq 3\epsilon$
@@ -2749,7 +2751,7 @@ unabhängig von der Auswahl der Folge $(S_{k})_{k}$)
   \begin{proof}
     $1\leq p <\infty$: \thref{satz:1.1.1/1} anwendbar. Es sei
     \begin{gather}
-      \sum_{k=1}^{\infty}\norm{g_{k}(x)}_{p} < \infty\label{eq:144}
+      \sum_{k=1}^{\infty}\norm{g_{k}(x)}_{p} < \infty\label{eq:15}
     \end{gather}
     
     \underline{zu zeigen:} $\exists g\in L_{p}(A,\mu)$ mit $g = \sum_{k=1}^{\infty}
@@ -2762,7 +2764,7 @@ unabhängig von der Auswahl der Folge $(S_{k})_{k}$)
     $\forall j \Longrightarrow \int_{A_{j}}
     \sum_{k=1}^{n}\abs{g_{k}(x)}\,d\mu \leq \norm{\sum_{k=1}^{n}
     \abs{g_{k}(x)}}_{p}\ \mu(A_{j})^{1-\frac1p}\leq c
-    \sum_{k=1}^{n}\norm{g_{k}(x)}_{p} <^{\autoref{eq:144}} \infty$
+    \sum_{k=1}^{n}\norm{g_{k}(x)}_{p} <^{\autoref{eq:15}} \infty$
     
     Aus dem Satz von B.\,Levi (\thref{satz:blevi}) folgt, dass die Summe
     $\sum_{k=1}^{\infty} \abs{g_{k}(x)}$ \fue auf $A_{j} (\forall j)$
@@ -2775,7 +2777,7 @@ unabhängig von der Auswahl der Folge $(S_{k})_{k}$)
     \begin{gather*}
       \int_{A} \biggl(\sum_{k}^{n}\abs{g_{k}(x)}_{p}\biggr)^{p}\,d\mu =
          \Biggl(\norm[\bigg]{\sum_{k=1}^{n}\abs{g_{k}(x)}}_{p}\Biggr) \leq
-         \biggl(\sum_{k=1}^{n}\norm{g_{k}}_{p}\biggr)^{p} <^{\autoref{eq:144}} \infty\\
+         \biggl(\sum_{k=1}^{n}\norm{g_{k}}_{p}\biggr)^{p} <^{\autoref{eq:15}} \infty\\
       \intertext{Nach dem Satz von B.\,Levi (\thref{satz:blevi})}
       \Longrightarrow \exists
          \int_{A}\biggl(\sum_{k=1}^{\infty}\abs{g_{k}(x)}\biggr)^{p}\,d\mu =
@@ -3821,7 +3823,7 @@ Funktion $f\in L_{p}(\R^{n})\ (1\leq p\leq \infty)$ als
 \begin{bemerk} % 3
   Übung, Blatt\,6, Aufgabe\,5
   
-  \begin{gather}\label{eq:134}
+  \begin{gather}\label{eq:18}
     L_{p}(A,\mu) \hookrightarrow (L_{p'}(A,\mu))'\qquad 1\leq p\leq\infty
   \end{gather}
   
@@ -3833,7 +3835,7 @@ Funktion $f\in L_{p}(\R^{n})\ (1\leq p\leq \infty)$ als
        \abs[\Big]{\int_{A}f(x)g(x)\,d\mu}
   \end{align*}
   
-  Gleichheit in \autoref{eq:134} gilt genau dann wenn $1< p \leq\infty$.
+  Gleichheit in \autoref{eq:18} gilt genau dann wenn $1< p \leq\infty$.
   
   \textbf{Aber:}
   \begin{gather*}
@@ -4180,7 +4182,7 @@ Funktion $f\in L_{p}(\R^{n})\ (1\leq p\leq \infty)$ als
 
 \begin{lemma}
   $a_{j}\geq 0$. Es gelte: 
-  \begin{gather}\label{eq:124}
+  \begin{gather}\label{eq:19}
     a_{j+k} \leq a_{j}a_{k}\qquad \forall j,k
   \end{gather}
   $\Longrightarrow$ $\exists$ $\lim_{j\rightarrow0} \sqrt[j]{a_{j}} =
@@ -4195,7 +4197,7 @@ Funktion $f\in L_{p}(\R^{n})\ (1\leq p\leq \infty)$ als
     \{0,1,\ldots,k-1\}$ mit $j=kp_{j}+q_{j}$
     
     $\Longrightarrow$ $\forall j: a_{j} = a_{kp_{j}+q_{j}}
-    \leq^{\autoref{eq:124}} a_{kp_{j}} a_{q_{j}} \leq a_{k}^{p_{j}}
+    \leq^{\autoref{eq:19}} a_{kp_{j}} a_{q_{j}} \leq a_{k}^{p_{j}}
     \underbrace{\max\{a_{0},a_{1},\ldots,a_{k-1}\}}_{=: M} \leq M
     a_{k}^{p_{j}}$
     
@@ -7637,7 +7639,7 @@ $K: H\rightarrow H$ kompakt \autoref{sec:2.3.1} $\Longrightarrow$
         \frac{\norm{Ax_{j_{n}}}}{y} \xrightarrow{n\rightarrow\infty} 0
       \end{gather*}
       $\Longrightarrow$ 
-      \begin{gather}\label{eq:46}
+      \begin{gather}\label{eq:20}
         \norm{A\psi_{n_{l}}} \rightarrow 0
       \end{gather}
       
@@ -7658,7 +7660,7 @@ $K: H\rightarrow H$ kompakt \autoref{sec:2.3.1} $\Longrightarrow$
       \end{gather*}
       
       $\Longrightarrow$ $1\leq \norm{\psi_{n_{l}} -\eta}
-      \xrightarrow{nach\autoref{eq:447}} 0$ Widerspruch zu \autoref{eq:46}
+      \xrightarrow{nach\autoref{eq:447}} 0$ Widerspruch zu \autoref{eq:20}
      \item $(x_{j}-u_{j})_{j}$ hat konvergente Teilfolge
       $(x_{j}-u_{j})_{j}$ beschränkt nach 2.\,Schritt
       $K$ kompakt $\Longrightarrow$ $\exists$ Teilfolge
@@ -8450,11 +8452,11 @@ $\forall g\in N(A^{+})$ $\Rightarrow$ $\sprod{y,g} = \sprod{Ax, g} =
       \begin{align*}
         A &:= I+ (T+P)(I-(K+P)^{-1})\\
         &= (I-(K+P)+T+P)(I-(K+P))^{-1} =
-           (I-K+T)(I-(K+P))^{-1}\taglabel{eq:72}
+           (I-K+T)(I-(K+P))^{-1}\taglabel{eq:21}
       \end{align*}
       
       $\Rightarrow$ $A: U\rightarrow U$ (zu sehen aus erster Darstellung
-      von $A$), aus \autoref{eq:72} sieht man, dass $A$ injektiv ist (mit
+      von $A$), aus \autoref{eq:21} sieht man, dass $A$ injektiv ist (mit
       Schritt 1 und Lemma 2\todo{link})
       
       $\dim U <\infty \Longrightarrow A$ surjektiv
@@ -8462,7 +8464,7 @@ $\forall g\in N(A^{+})$ $\Rightarrow$ $\sprod{y,g} = \sprod{Ax, g} =
       Es sei $y\in X$ $\Longrightarrow$ $(T+P)(I-(K+P))^{-1}y\in U$
       $\Longrightarrow$ $x\in U$ mit $Ax= (T+P)(I-(K+P))^{-1}$
       $\Longrightarrow$ $(I-(K+T))\bigl((I-(K+P))^{-1} (y-x)\bigr) =
-      A(y-x) = Ay - Ax =^{\autoref{eq:72}} y+
+      A(y-x) = Ay - Ax =^{\autoref{eq:21}} y+
       \underbrace{(T+P)(I-(K+P))^{-1}}_{=Ax} y - Ax = y$
      \item konstruieren Widerspruch zu $m<n$
       $I-K+T$ ist nach dem, was wir uns überlegt haben, eine Bijektion.
@@ -9882,6 +9884,237 @@ $D'(\Omega), \Omega\subset \R^{n}$ Gebiet
     wie bei lemma1\todo{link}
   \end{proof}
 \end{satz}
+
+\begin{satz}
+  \begin{enumerate}
+   \item $T\in S'(\R^{n}) \Longleftrightarrow$
+    \begin{enumerate}
+     \item $T$ ist linear und $T:S(\R^{n}) \rightarrow \C$
+     \item $\exists k,l\in \N_{0} \exists c>0 \forall \phi\in S(\R^{n}):$
+      \begin{gather}\label{eq:37}
+        \abs{T(\phi)} \leq c \norm{\phi}_{k,l} = c\sup_{x\in\R^{n}}
+           (1+\abs{x}^{k}) \sum_{\abs{\alpha}\leq l} \abs{D^{\alpha}\phi(x)}
+      \end{gather}
+    \end{enumerate}
+   \item $S'(\R^{n})$ ist vollständig, \Dh wenn für all $\phi\in
+    S(\R^{n})$ der $\lim_{j\rightarrow\infty} T_{j}(\phi)$ existiert,
+    setzen wir ein neues Funktional $T(\phi) := \lim_{j\rightarrow\infty}
+    T_{j}(\phi)$, welches ebenfalls in $S'(\R^{n})$ liegen muss.
+  \end{enumerate}
+  
+  \begin{proof}
+    \textit{(nur zu (1))}
+    \begin{description}
+     \item["`$\Leftarrow$"'] klar, nach Definition von $S'(\R^{n})$
+     \item["`$\Rightarrow$"'] Analog zum Beweis von Lemma
+      5.1.4/1\todo{link}
+      
+      Annahme: \autoref{eq:37} gilt nicht.
+      
+      Dann würde für alle $l\in\N$ ein $\phi_{l}\in S(\R^{n})$ mit
+      $\abs{T(\phi_{l})} > l\norm{\phi_{l}}_{l,l}$ existieren. Wir setzen
+      $\phi_{l}=\frac{\phi_{l}}{\abs{T(\phi_{l})}}$ und erhälten für alle
+      $\psi$ mit $\norm{\psi_{l}}_{l,l}<\frac{1}{l}$ $T(\psi_{l}) = 1$
+      ($\forall l$).
+      
+      $\Rightarrow$ $\psi_{l}\rightarrow 0$ in $S(\R^{n})$, denn
+      $\norm{\psi_{l}}_{k,j} \leq \norm{\psi_{l}}_{l,l} < \frac{1}{l}
+      \rightarrow 0$ Da $T\in S'(\R^{n})$ $\Rightarrow$
+      $\abs{T(\psi_{l})} \rightarrow 0$ Widerspruch
+    \end{description}
+  \end{proof}
+\end{satz}
+
+\subsubsection{Operationen mit Distributionen}
+
+\begin{defini}
+  $T\in S'(\R^{n}), \phi\in S(\R^{n})$
+  \begin{enumerate}
+   \item $(D^{\alpha}T)(\phi) := (-1)^{\abs{\alpha}} T(D^{\alpha}\phi),
+    \alpha\in\N_{0}^{n}$
+   \item $a(x)\in C^{\infty}, \abs{D^{\alpha}a(x)} \leq
+    c_{\alpha}(1+\abs{x}^{m_{\alpha}}), \forall\alpha\in\N_{0}^{n}$\\
+    \begin{gather*}
+      (aT)(\phi) = T(a\phi)
+    \end{gather*}
+   \item $A=(\alpha_{ij})$ reulär ($\det A\not=0$), $b\in\R^{n}$
+    \begin{gather*}
+      T(A\cdot+b)(\phi) = \frac{1}{\abs{\det A}}
+         T\bigl(\phi(A^{-1}(x-b))\bigr)
+    \end{gather*}
+  \end{enumerate}
+\end{defini}
+
+\begin{satz}
+  \begin{enumerate}
+   \item $T\in S'(\R^{n}), \alpha\in\N_{0}^{n}$ $\Rightarrow$ $D^{\alpha}
+    T\in S'(\R^{n})$\\
+    $T_{j} \rightarrow T$ in $S'$ $\Rightarrow$ $D^{\alpha} T_{j}
+    \rightarrow D^{\alpha} T$ in $S'$
+   \item $a(x)\in C^{\infty}$ wie in Def 2\todo{link} $\Rightarrow$
+    $aT\in S'(\R^{n})$\\
+    $T_{j} \rightarrow T$ in $S'$ $\Longrightarrow$ $aT_{j} \rightarrow
+    aT$ in $S'$
+   \item $A, b$ wie in Def 2\todo{link} $\Rightarrow$ $T(A\cdot+b)\in
+    S'(\R^{n})$\\
+    $T_{j}\rightarrow T$ in $S'$ $\Rightarrow$ $T_{j}(A\cdot+b)
+    \rightarrow T(A\cdot+b)$
+  \end{enumerate}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item $E'(\R^{n})\subset S(\R^{n})$ $\Rightarrow$ $\delta_{a},
+    D^{\alpha}\delta_{a}\in S'(\R^{n})$
+   \item Für $1\leq p \leq \infty$ ist $L_{p}(\R^{n})\subset
+    S'(\R^{n})$ eine stetige Einbettung.
+    \begin{proof}
+      $f\in L_{p}(\R^{n}), f(\phi) := \int_{\R^{n}} f(x)\phi(x)\,dx$
+      \begin{align*}
+        \abs{f(\phi)} &\leq \int_{\R^{n}} \abs{f(x)} \abs{\phi(x)}\,dx\\
+        &\leq \norm{f}_{L_{p}} \norm{\phi}_{L_{p}}&&\text{nach
+           \eqref{eq:hoelder-int} mit }\frac{1}{p}+\frac{1}{p'} =1\\
+        &\leq c \norm{f}_{p} \norm{\phi}_{k,0}&&\text{mit} k>\frac{n}{p'}+1
+      \end{align*}
+      Mithilfe von Satz 2\todo{link} folgt daraus, dass $f\in S'(\R^{n})$
+    \end{proof}
+   \item Ist $f$ ein messbares Fuktional und $c,m$ mit $\abs{f(x)} \leq
+    c(1+\abs{x}^{m})$ existieren, dann ist
+    \begin{gather*}
+      f(\phi) := \int_{\R^{n}} f(x)\phi(x)\,dx\quad\in S'(\R^{n})
+    \end{gather*}
+    
+    \begin{proof}
+      \begin{align*}
+        \abs{f(\phi)} &\leq c\int_{\R^{n}} (1+\abs{x}^{m})
+           \abs{\phi(x)}\,dx\\
+        & = c_{1}\int_{\R^{n}}(1+\abs{x}^{m})(1+\abs{x}^{n+1})
+           \abs{\phi(x)}\frac{1}{1+\abs{x}^{n+1}}\,dx\\
+        &\leq c_{2} \norm{\phi}_{m+n+1, 0} \underbrace{\int_{\R^{n}}
+           \frac{dx}{1+\abs{x}^{n+1}}}_{<\infty}\\
+        &\leq c_{3} \norm{\phi}_{m+n+1,0}
+      \end{align*}
+    \end{proof}
+    
+    Insbesondere ist jedes Polynom eine langsamwachsende Distribution
+    ($\in S'(\R^{n}$)
+   \item
+    \begin{gather*}
+      \int_{\R^{n}} \abs{f(x)}(1+\abs{x}^{m})^{-1}\,dx <\infty
+         \Longrightarrow f\in S'(\R^{n})
+    \end{gather*}
+   \item \highl{langsam wachsende Maße}, $\mu$ Maß auf $\R^{n}$\\
+    $\exists m\geq 0$, so dass $\int_{\R^{n}}
+    (1+\abs{x}^{m})^{-1}\,d\mu(x)<\infty$
+    
+    $\Longrightarrow$ 
+    \begin{gather*}
+      \mu(\phi) := \int_{\R^{n}}\phi(x)\,d\mu(x) \in S'(\R^{n})
+    \end{gather*}
+   \item $(\cos e^{x})' = e^{x}\sin e^{x}\in S'(\R^{n})$
+    \begin{align*}
+      f(\phi) &= \int_{-\infty}^{\infty} e^{x}\sin e^{x} \phi(x)\,dx\\
+      &= \int_{-\infty}^{\infty} (\cos e^{x})'\phi(x)\,dx\\
+      &= -\int_{-\infty}^{\infty} \cos e^{x} \phi'(\phi)\,dx&&\text{mit
+         partieller Integration}\help{\phi ist Testfunktion und damit auf
+         dem Rand 0 -- irgendwie wichtig}
+    \end{align*}
+
+    \begin{gather*}
+      \abs{f(\phi)} \leq \int_{-\infty}^{\infty} \abs{\phi'(x)}\,dx \leq
+         c \norm{\phi}_{k,1}
+    \end{gather*}
+    für hinreichend großes $k$
+   \item $f\in L_{1}^{loc}(\R^{n})\cap S'(\R^{n}), f(x)\geq 0$ \fue
+    $\Longrightarrow$ $f$ ist langsam wachsend, \Dh es gilt Punkt (4)
+    
+    \begin{proof}
+      $f\in S'(\R^{n})$, nach Satz 2\todo{link} $\Rightarrow$ $\exists
+      k,l\in\N$ mit
+      \begin{gather}\label{eq:38}
+        \abs{f(\phi)} \leq c\norm{\phi}_{k,l}
+      \end{gather}
+      Wir wählen $\phi_{j}(x) := \eta_{j}(x)(1+\abs{x}^{k})^{-1}$, wobei
+      $\eta(x)\geq 0$ und $\eta(x)=1$ für $\abs{x}\leq 1$, $\eta\in
+      D(\R^{n}),\eta_{j}(x) = \eta(\frac{x}{j})$
+      
+      $\Longrightarrow$ $\eta_{j}(x) \rightarrow 1$ für jedes $x$
+      
+      Aus \autoref{eq:38} folgt
+      \begin{gather*}
+        \begin{multline}
+          \int_{\R^{n}} \underbrace{f(x)\eta_{j}(x)(1+\abs{x}^{k})^{-1}}
+          _{\geq 0\ \fue}\,dx \leq c
+          \norm{\eta_{j}(x)(1+\abs{x}^{k})^{-1}}_{k,l}\\
+          = c\sup_{x}(1+\abs{x}^{k}) \sum_{\abs{\alpha}\leq l}
+          \abs{\underbrace{D^{\alpha}(\eta_{j}(x))(1+\abs{x}^{k})^{-1}}
+            _{c_{1}(1+\abs{x}^{k})^{-1}}} \leq c_{2}\qquad \forall x,j
+        \end{multline}
+      \end{gather*}
+      Lemma von Fatou\todo{link im ersten Semester suchen} $\Rightarrow$
+      $\exists \int_{\R^{n}}f(x)(1+\abs{x}^{k})^{-1}\,dx \leq c_{2}$
+    \end{proof}
+  \end{enumerate}
+\end{bemerk}
+
+\subsection{Die Fouriertransformation in
+  \texorpdfstring{$S(\R^{n})$}{S(Rn)}}
+
+\begin{defini}[Fouriertransformation]\label{def:5.2.3/1}
+  $\phi\in S(\R^{n})$
+  \begin{gather*}
+    \hat{\phi} = (F\phi)(\xi) := \frac{1}{(2\pi)^{\nicefrac{n}{2}}}
+       \int_{\R^{n}} \phi(x) e^{-ix\xi}\,dx
+  \end{gather*}
+  mit $x\xi = \sum_{j=1}^{n} x_{j}\xi_{j}$ für $x,\xi\in\R^{n}$ heißt
+  \highl{Fouriertransformation} von $\phi$
+\end{defini}
+
+\begin{bemerk}
+  \begin{gather*}
+    \abs{\int_{\R^{n}} \phi(x) e^{-ix\xi}\,dx} \leq \int_{\R^{n}}
+       \abs{\phi(x)}\,dx = \norm{\phi}_{L_{1}} <\infty
+  \end{gather*}
+  Die \autoref{def:5.2.3/1} ist also gerechtfertigt und sinnvoll für alle
+  $\phi\in L_{1}(\R^{n})$.
+\end{bemerk}
+
+\begin{lemma}
+  \begin{align*}
+    F(e^{-\frac{\abs{x}^{2}}{2}}) = e^{-\frac{\abs{\xi}^{2}}{2}}&&
+       (\xi\in\R^{n})
+  \end{align*}
+  
+  \begin{proof}
+    Wir betrachten
+    \begin{gather*}
+      h(s) = \int_{-\infty}^{\infty} e^{-\frac{t^{2}}{2}} e^{its}\,dt
+    \end{gather*}
+    \begin{align*}
+      h'(s) &= \int_{-\infty}^{\infty} ite^{-\frac{t^{2}}{2}} e^{its}\,dt\\
+      &= (-i)\int_{-\infty}^{\infty}
+         e^{its}\frac{d}{dt}\bigl[e^{-\frac{t^{2}}{2}}\bigr]\,dt\\
+      &= (-i)(-1) \int_{-\infty}^{\infty} is e^{its}
+         e^{-\frac{t^{2}}{2}}\,dt&&\text{nach partieller Integration}\\
+      &= -sh(s)
+    \end{align*}
+    $\Longrightarrow$ $h'(s) = -s h(s), h(0) = \int_{-\infty}^{\infty}
+    e^{-\frac{t^{2}}{2}} = \sqrt{2\pi}$ aus Ana 2
+    
+    $\Longrightarrow$ $h(s) = h(0) e^{-\frac{s^{2}}{2}} = \sqrt{2\pi}
+    e^{-\frac{s^{2}}{2}}$
+    
+    \begin{align*}
+      F(e^{-\frac{\abs{x}^{2}}{2}}) &= F(e^{-\frac{x_{1}^{2}}{2}}
+         e^{-\frac{x_{2}^{2}}{2}} \cdots e^{-\frac{x_{n}^{2}}{2}})\\
+      & = F_{1}(e^{-\frac{x_{1}^{2}}{2}}) \cdots
+         F_{1}(e^{-\frac{x_{n}^{2}}{2}})\\
+      &= (\frac{1}{\sqrt{2\pi}} h(\xi_{1}) \cdots \frac{1}{\sqrt{2\pi}}
+         h(\xi_{n})) = e^{-\frac{\xi_{1}^{2}}{2}} \cdots
+         e^{-\frac{\xi_{n}^{2}}{2}} = e^{-\frac{\xi^{2}}{2}}
+    \end{align*}
+  \end{proof}
+\end{lemma}
 
 \clearpage
 \appendix
