deleted bins, new command \semaeq instead of old [GNA]
git-svn-id: https://svn.lug-jena.de/uni-skripte@112 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-dml2/dml2.latex
+++ b/vogel-dml2/dml2.latex
@@ -118,6 +118,7 @@
 \newcommand{\help}[1]{\textcolor{green}{help: #1}}
 \newcommand{\todo}[1]{\textcolor{blue}{todo: #1}}
 \newcommand{\define}{\Leftrightarrow_{df}} %\define nur in $ $ benutzen!
+\newcommand{\semaeq}{\mathrel|\joinrel=\joinrel\mathrel|} %semantische Aequivalenz
 
 % Zum Markieren von wichtigen Begriffen. Diese sollen hervorgehoben
 % und in den Index aufgenommen werden.
@@ -368,19 +369,18 @@ Es seien $F$ und $G$ Formeln.\\
 $F$ und $G$ hei\ss en \highl{semantisch \"aquivalent} $\Leftrightarrow$ f\"ur alle
 Belegungen stimmen die Wahrheitswerte von $F$ und $G$ \"uberein:
 $I_{\beta}(F)=I_{\beta}(G)$
-\item Schreibweise: $(F\models G) \wedge (G\models F)$ \help{[ARGH, wo ist das Zeichen
-f\"ur semantische \"Aquivalenz?]}
+\item Schreibweise: $(F\models G) \wedge (G\models F)$ 
 \item Frage: Was hat "`semantische \"Aquivalenz"' mit der Bijunktion
 "`$\leftrightarrow$"' zu tun?\\
-"`$\leftrightarrow$"': Formel vs. "`$[GNA]$"': keine Formel, Aussage \"uber Formel
+"`$\leftrightarrow$"': Formel vs. "`$\semaeq$"': keine Formel, Aussage \"uber Formel
 \end{defini}
 
 \begin{satz}
 $F$ und $G$ Formeln.\\
-$F$ [GNA] $G$ gdw. $(F\leftrightarrow G) \in\,TAUT$
+$F \semaeq G$ gdw. $(F\leftrightarrow G) \in\,TAUT$
 
 \begin{proof}
-$F$ [GNA] $G$ \\
+$F \semaeq G$ \\
 $\Leftrightarrow$ f\"ur alle Belegungen $\beta$ gilt: $I_\beta(F)=I_\beta(G)$\\
 $\Leftrightarrow$ f\"ur alle Belegungen $\beta$ gilt: $I_\beta(F\leftrightarrow G)=1$\\
 $\Leftrightarrow$ $(F\leftrightarrow G) \in TAUT$
@@ -400,30 +400,30 @@ und $\beta(A_2)=x_2$ und $\ldots$ und $\beta(A_n)=x_n$ gilt:
 $F$ \"aq. $G$ $\Leftrightarrow$ $f_F=f_G$
 \end{fakt}
 
-\emph{Fazit}: Die semantische \"Aquivalenz "`[GNA]"' ist eine
+\emph{Fazit}: Die semantische \"Aquivalenz "`$\semaeq$"' ist eine
 \highl{\"Aquivalenzrelation}
 auf der Menge $\mathcal{L}(\mathcal{A})$
 
 \begin{satz}[Regeln f\"ur semantisch \"aquivalentes umformen]
 F\"ur Formeln $F,G,H$ gilt:
-\item $(F\wedge G) [GNA] (G\wedge F)$, Disjunktion und Bijunktion genauso
+\item $(F\wedge G) \semaeq (G\wedge F)$, Disjunktion und Bijunktion genauso
 (Kommutivit\"at)
-\item $(F \wedge G)\wedge H) [GNA] F \wedge (G\wedge H)$, Disjunktion genauso
+\item $(F \wedge G)\wedge H) \semaeq F \wedge (G\wedge H)$, Disjunktion genauso
 (Assozivit\"at)
-\item $\begin{array}{l} F\wedge (F\vee G) [GNA] F\\ 
-F\vee (F\wedge G) [GNA] F\end{array}\Bigg\}$ Absorbtion
-\item $\neg\neg F [GNA] F$ (doppelte Negation)
-\item $\begin{array}{l}\neg(F\wedge G) [GNA] \neg F\vee \neg G \\
-\neg(F\vee G) [GNA] \neg F\wedge \neg G\end{array}\Bigg\}$ de Morgansche Regeln
-\item $\begin{array}{l}F\wedge (G\vee H) [GNA] (F\wedge G)\vee (F\wedge H)\\
-F\vee (G\wedge H) [GNA] (F\vee G)\wedge (F\vee H)\end{array}\Bigg\}$
+\item $\begin{array}{l} F\wedge (F\vee G) \semaeq F\\ 
+F\vee (F\wedge G) \semaeq F\end{array}\Bigg\}$ Absorbtion
+\item $\neg\neg F \semaeq F$ (doppelte Negation)
+\item $\begin{array}{l}\neg(F\wedge G) \semaeq \neg F\vee \neg G \\
+\neg(F\vee G) \semaeq \neg F\wedge \neg G\end{array}\Bigg\}$ de Morgansche Regeln
+\item $\begin{array}{l}F\wedge (G\vee H) \semaeq (F\wedge G)\vee (F\wedge H)\\
+F\vee (G\wedge H) \semaeq (F\vee G)\wedge (F\vee H)\end{array}\Bigg\}$
 Distributivi\"at
-\item $\begin{array}{l}F \in TAUT\,:\quad F\wedge G [GNA] G\\
-F \in TAUT\,:\quad F\vee G [GNA] F\end{array}\Bigg\}$ Tautologieregeln
-\item $\begin{array}{l}F \in \overline{SAT}\,:\quad F\wedge G [GNA] F\\
-F \in \overline{SAT}\,:\quad F\vee G [GNA] G\end{array}\Bigg\}$
+\item $\begin{array}{l}F \in TAUT\,:\quad F\wedge G \semaeq G\\
+F \in TAUT\,:\quad F\vee G \semaeq F\end{array}\Bigg\}$ Tautologieregeln
+\item $\begin{array}{l}F \in \overline{SAT}\,:\quad F\wedge G \semaeq F\\
+F \in \overline{SAT}\,:\quad F\vee G \semaeq G\end{array}\Bigg\}$
 Unerf\"ullbarkeitsregeln
-\item $F\wedge F [GNA] F$ und $F\vee F [GNA] F$ (Idempotenzregeln)
+\item $F\wedge F \semaeq F$ und $F\vee F \semaeq F$ (Idempotenzregeln)
 \end{satz}
 
 \begin{satz}[Ersetzbarkeitstheorem]
@@ -431,15 +431,15 @@ Es seien $F,E$ zwei semantisch \"aquivalente Formeln.\\
 $G$ sei eine Formel, die $F$ als Teilformel enth\"alt.\\
 $H$ sei eine Formel, die entsteht wenn irgendein Vorkommen von $F$ in $G$ durch
 $E$ ersetzt wird.\\
-Dann ist \begin{displaymath} G [GNA] H\end{displaymath}
+Dann ist \begin{displaymath} G \semaeq H\end{displaymath}
 \begin{proof}
 durch Formelinduktion, wollen zeigen: alle Formeln $G \in
 \mathcal{L}_{AL}(\mathcal{A})$ besitzen die "`Ersetzbarkeitseigenschaft"'.
 \item[IA]: Es sei $G=A$ ein Atom $(A\in \mathcal{A})$.\\
-Dann gilt $F=A$ und damit $F=G$ und deshalb gilt: $G=F [GNA] E=H$
+Dann gilt $F=A$ und damit $F=G$ und deshalb gilt: $G=F \semaeq E=H$
 \item[IS]: Es sei $G$ eine zusammengesetzte Formel.\\
 \begin{description}
-\item[1. Fall] Es sei $F=G$. Dann gilt wieder $G=F [GNA] E=H$
+\item[1. Fall] Es sei $F=G$. Dann gilt wieder $G=F \semaeq E=H$
 \item[2. Fall] Es sei $F$ eine echte Teilformel von $G$.
 \begin{description}
 \item[2.1] Es sei $G=(G_1\wedge G_2) eine Konjunktion$\\
@@ -449,11 +449,11 @@ $F$ eine Teilformel von $G_1$ oder $G_2$.
 \begin{description}
 \item[Fall a] $F$ sei Teilformel von $G_1$\\
 $H_1$ sei eine Formel die durch Ersetzung von $F$ durch $E$ aus $G_1$ entsteht.
-Dann $G_1 [GNA] H_1$. Dann gilt:\\
+Dann $G_1 \semaeq H_1$. Dann gilt:\\
 $H=(H_1\wedge G_2)$ und \\
 $I_\beta(H)=\,min\{I_\beta(H_1),I_\beta(G_2)\}=\,min\{I_\beta(G_1),
 I_\beta(G_2)\}=I_\beta(G)$\\
-$\Rightarrow H [GNA] G$
+$\Rightarrow H \semaeq G$
 \item[Fall b] $F$ sei Teilformel von $G_2$: s. Fall a
 \end{description}
 \item[2.2] Es sei $G=(G_1\vee G_2)$ eine Disjunktion. Schluss wie bei 2.1
@@ -461,20 +461,20 @@ $\Rightarrow H [GNA] G$
 $F$ ist eine Teilformel von $G_1$ oder $G_2$.
 \begin{description}
 \item[Fall a] Sei $F$ Teilformel von $G_1$ und $H_1$ die Formel, die durch
-Ersetzung von $F$ durch $E$ aus $G_1$ entsteht: dann gilt $G_1 [GNA] H_1$.\\
+Ersetzung von $F$ durch $E$ aus $G_1$ entsteht: dann gilt $G_1 \semaeq H_1$.\\
 Weiter ist $H=(H_1\rightarrow G_2)$ und es gilt:\\
 $I_\beta(H)=1 \Leftrightarrow I_\beta(H_1)\leq I_\beta(G_2) \Leftrightarrow
 I_\beta(G_1)\leq I_\beta(G_2) \Leftrightarrow I_\beta(G)=1$\\
-$\Rightarrow H [GNA] G$
+$\Rightarrow H \semaeq G$
 \item[Fall b] wie oben mit $F$ Teilformel von $G_2$
 \end{description}
 \item[2.4] Es sei $G=(G_1\leftrightarrow G_2)$: wie 2.3
 \item[2.5] Es sei $G=\neg G'$ eine Negation\\
 Dann ist $F$ eine Teilformel von $G'$ und $H'$ sei eine Formel, die durch
 Ersetzung von $F$ durch $E$ aus $G'$ entsteht.\\
-Nach Induktionsvorraussetzung ist $G' [GNA] H'$ und damit:\\
+Nach Induktionsvorraussetzung ist $G' \semaeq H'$ und damit:\\
 $I_\beta(H)=1-I_\beta(H')=1-I_\beta(G')=I_\beta(G)$ (da $H=\neg H'$)\\
-$\Rightarrow$ $H [GNA] G$
+$\Rightarrow$ $H \semaeq G$
 \end{description}
 \end{description}
 \end{proof}
@@ -514,9 +514,9 @@ Es sei $F_D'=\bigvee_{i=1}^{m}(\bigwedge_{j=1}^{n_i}L_{ij})$.\\
 Dann gilt: 
 \begin{eqnarray*}
 F = \neg F_D' & = & \neg (\bigvee_{i=1}^{m}(\bigwedge_{j=1}^{n_i}L_{ij})\\
-& [GNA] & \bigwedge_{i=1}^{m}(\neg (\bigwedge_{j=1}^{n_i}L_{ij})\\
-& [GNA] & \bigwedge_{i=1}^{m}(\bigvee_{j=1}^{n_i}\neg L_{ij})\\
-& [GNA] & \bigwedge_{i=1}^{m}(\bigvee_{j=1}^{n_i}\overline{L_{ij}})
+& \semaeq & \bigwedge_{i=1}^{m}(\neg (\bigwedge_{j=1}^{n_i}L_{ij})\\
+& \semaeq & \bigwedge_{i=1}^{m}(\bigvee_{j=1}^{n_i}\neg L_{ij})\\
+& \semaeq & \bigwedge_{i=1}^{m}(\bigvee_{j=1}^{n_i}\overline{L_{ij}})
 \end{eqnarray*}
 wobei $\overline{L_{ij}} = \Bigg\{\begin{array}{l}\neg A\textrm{, falls }
 L_{ij}=A\\ A\textrm{, falls }L_{ij}=\neg A\end{array}$\\
@@ -524,34 +524,34 @@ Dies ist eine Formel in KNF.
 \"Ahnlich $F_K'$: liefert eine zu $F$ semantisch \"aquivalente Formel in DNF.
 \item[Fall b]
 Es seien $F=(F'\wedge F'')$ eine Konjunktion. $F'$ und $F''$ erf\"ullen die IV 
-und so gilt $F' [GNA] F_D'$ in DNF und $F' [GNA] F_K'$ in KNF und $F'' [GNA]
-F_D''$ ind DNF und $F'' [GNA] F_K''$ in KNF.\\
+und so gilt $F' \semaeq F_D'$ in DNF und $F' \semaeq F_K'$ in KNF und $F'' \semaeq
+F_D''$ ind DNF und $F'' \semaeq F_K''$ in KNF.\\
 Zun\"achst 
 \begin{enumerate}
 \item KNF f\"ur $F$: $(F_K' \wedge F_K'')$ ist in KNF und es gilt: $F=(F'\wedge
-F'') [GNA] (F_K'\wedge F_K'')$
-\item semantisch \"aquivalente DNF f\"ur $F$: wir gehen aus von $F_D' [GNA] F'$
-und $F_D'' [GNA] F''$\\
+F'') \semaeq (F_K'\wedge F_K'')$
+\item semantisch \"aquivalente DNF f\"ur $F$: wir gehen aus von $F_D' \semaeq F'$
+und $F_D'' \semaeq F''$\\
 $F_D'$ hat die Gestalt $\bigvee_{i=1}^{m'}G_i$, dabei ist
 $G_i=\bigwedge_{j=1}^{n_i}L_{ij}$ und $F_D''$ hat die Gestalt
 $\bigvee_{k=1}^{m''} H_k$, dabei ist $H_k=\bigwedge_{j=1}^{n_k}L_{ij}$ und es
 gilt (mit Distributivgesetz):
 \begin{eqnarray*}
-F=(F'\wedge F'') & [GNA] & F_D'\wedge F_D''=(\bigvee_{i=1}^{m'}G_i)\wedge
+F=(F'\wedge F'') & \semaeq & F_D'\wedge F_D''=(\bigvee_{i=1}^{m'}G_i)\wedge
 (\bigvee_{k=1}^{m''} H_k)\\
-& [GNA] & \bigvee_{i=1}^{m'}\Big(G_i \wedge (\bigvee_{k=1}^{m''} H_k)\Big)\\
-& [GNA] & \bigvee_{i=1}^{m'}\Big(\bigvee_{k=1}^{m''}(\underbrace{G_i\wedge
+& \semaeq & \bigvee_{i=1}^{m'}\Big(G_i \wedge (\bigvee_{k=1}^{m''} H_k)\Big)\\
+& \semaeq & \bigvee_{i=1}^{m'}\Big(\bigvee_{k=1}^{m''}(\underbrace{G_i\wedge
 H_k}_{\textrm{Konjugation von Literalen}})\Big)
 \end{eqnarray*}
 Dies ist eine DNF.
 \end{enumerate}
 \item[Fall c] Disjunktionen: Es sei $F=(G\vee H)$.\\
-Es gilt: $F [GNA] \neg \neg (G\vee H) [GNA] \neg (\neg G \wedge \neg H)$\\
+Es gilt: $F \semaeq \neg \neg (G\vee H) \semaeq \neg (\neg G \wedge \neg H)$\\
 Weiter wie in Fall a und b.
 \item[Fall d] Implikation: Es sei $F=(G\rightarrow H)$.\\
-Dann ist $F [GNA] \neg G \vee H$. Weiter wie Fall c.
+Dann ist $F \semaeq \neg G \vee H$. Weiter wie Fall c.
 \item[Fall e] Bijunktionen: Es sei $F=(G\leftrightarrow H)$.\\
-Dann ist $F [GNA] (G\wedge H)\vee (\neg G \wedge \neg H)$. Weiter wie in Fall
+Dann ist $F \semaeq (G\wedge H)\vee (\neg G \wedge \neg H)$. Weiter wie in Fall
 a, b, c.
 \end{description}
 \end{proof}
@@ -561,18 +561,18 @@ Der Beweis ist zugleich Nachweis der Korrektheit des folgenden Algorithmus.
 \subsubsection{1. Verfahren zur Bestimmung der Normalform}
 \begin{description}
 \item[1. Schritt:] Ersetze alle "`$\leftrightarrow$"' gem\"a\ss{}
-$G\leftrightarrow H [GNA] (G\rightarrow H)\wedge (H\rightarrow G)$
+$G\leftrightarrow H \semaeq (G\rightarrow H)\wedge (H\rightarrow G)$
 \item[2. Schritt:] Ersetze alle Pfeile "`$\rightarrow$"' gem\"a\ss{}
-$(G\rightarrow H) [GNA] (\neg G \vee H)$\\
+$(G\rightarrow H) \semaeq (\neg G \vee H)$\\
 Nun ergibt sich eine Formel, die nur aus Konjunktionen und Disjunktionen
 besteht.
 \item[3. Schritt:] Negation "`nach innen"' ziehen, gem\"a\ss{} $\neg(G\wedge H)
-[GNA] \neg G \vee \neg H$ und $\neg (G\vee H) [GNA] \neg G \wedge \neg H$
+\semaeq \neg G \vee \neg H$ und $\neg (G\vee H) \semaeq \neg G \wedge \neg H$
 \item[4. Schritt:] \begin{description} \item[a] f\"ur eine KNF:\\
-Disjunktionen nach "`innen"' ziehen, gem\"a\ss{} $F\vee(G\wedge H) [GNA] (F\vee
+Disjunktionen nach "`innen"' ziehen, gem\"a\ss{} $F\vee(G\wedge H) \semaeq (F\vee
 G)\wedge (F\vee H)$
 \item[b] f\"ur eine DNF:\\
-Konjunktionen nach "`innen"' ziehen, gem\"a\ss{} $F\wedge (G\vee H) [GNA]
+Konjunktionen nach "`innen"' ziehen, gem\"a\ss{} $F\wedge (G\vee H) \semaeq
 (F\wedge G)\vee (F\wedge H)$
 \end{description}
 Nach Schritt 4 ergibt sich eine Formel in KNF/DNF
@@ -581,9 +581,9 @@ Nach Schritt 4 ergibt sich eine Formel in KNF/DNF
 \item[a] f\"ur KNF
 \begin{description}
 \item[a.1] $\ldots \wedge (A\vee B\vee \ldots \vee B\vee B\vee A)\wedge \ldots
-[GNA] \ldots \wedge (A\vee B)\wedge \ldots$ lasse alle Mehrfachvorkommen in
+\semaeq \ldots \wedge (A\vee B)\wedge \ldots$ lasse alle Mehrfachvorkommen in
 Disjunktionen weg.
-\item[a.2] $\ldots \wedge(A\vee \ldots \vee \neg A)\wedge \ldots [GNA] w$
+\item[a.2] $\ldots \wedge(A\vee \ldots \vee \neg A)\wedge \ldots \semaeq w$
 streiche komplette Klammer, da Tautologie.
 \end{description}
 \item[b] f\"ur DNF
@@ -633,7 +633,7 @@ Gestalt hei\ss t \highl{Elementarkonjunktion}.
 \begin{fakt} $I_\beta(A_i^{x_i})=1 \Leftrightarrow \beta(A_i)=x_i \textrm{ und
 damit } I(A_1^{x_1}\wedge A_2^{x_2}\wedge \ldots \wedge A_n^{x_n})
 \Leftrightarrow \bigwedge_{1\leq i \leq n}\beta(A_i)=x_i$\\
-Also: $F [GNA] \bigvee_{(x_1,\ldots,x_n)\in E}(A_1^{x_1}\wedge \ldots \wedge
+Also: $F \semaeq \bigvee_{(x_1,\ldots,x_n)\in E}(A_1^{x_1}\wedge \ldots \wedge
 A_n^{x_n})$.\\
 Eine solche DNF hei\ss t \highl{kanonische DNF (DKNF)}
 \end{fakt}
@@ -651,7 +651,7 @@ Gestalt hei\ss t Elementarkonjunktion.
 damit } I(A_1^{\overline{x_1}}\vee A_2^{\overline{x_2}}\vee \ldots \vee
 A_n^{\overline{x_n}}) =0 \Leftrightarrow \beta(A_1)=x_i \textrm{ und } \ldots
 \textrm{ und } \beta(A_n)=x_n$\\
-Also: $F [GNA] \bigwedge_{(x_1,\ldots,x_n)\in N}(A_1^{\overline{x_1}}\vee \ldots
+Also: $F \semaeq \bigwedge_{(x_1,\ldots,x_n)\in N}(A_1^{\overline{x_1}}\vee \ldots
 \vee A_n^{\overline{x_n}})$.\\
 Eine solche KNF hei\ss t \highl{kanonische KNF (KKNF)}
 \end{fakt}
@@ -718,10 +718,10 @@ HORN-Formeln sind aus zwei Gr\"unden von Bedeutung:
 \end{enumerate}
 
 \emph{zu 1}: prozedurale Deutung am (obigen) Beispiel:\\
-$(A\vee \neg B\vee \neg C) [GNA] (\neg (B\wedge C)\vee A) [GNA] (B\wedge
+$(A\vee \neg B\vee \neg C) \semaeq (\neg (B\wedge C)\vee A) \semaeq (B\wedge
 C)\rightarrow A$\\
-$(C\vee \neg D) [GNA] (\neg D\vee C) [GNA] (D\rightarrow C)$\\
-$\neg A\vee \neg B [GNA] \neg (A\wedge B) [GNA] \neg (A\wedge B)\vee f [GNA] A\wedge B\rightarrow f$
+$(C\vee \neg D) \semaeq (\neg D\vee C) \semaeq (D\rightarrow C)$\\
+$\neg A\vee \neg B \semaeq \neg (A\wedge B) \semaeq \neg (A\wedge B)\vee f \semaeq A\wedge B\rightarrow f$
 
 \emph{zu 2}: Algorithmus
 \begin{description}
@@ -789,7 +789,7 @@ $\neg A\vee \neg B [GNA] \neg (A\wedge B) [GNA] \neg (A\wedge B)\vee f [GNA] A\w
       \item[b] Die Ausgabe "`erf\"ullbar"' ist korrekt.\\
       Es sei $G$ eine beliebige Disjunktion ("`Klausel"') von $F$.
       \begin{description}
-	 \item[1. Fall:] $G [GNA] A$ (d.h. $G=w\rightarrow A)$\\
+	 \item[1. Fall:] $G \semaeq A$ (d.h. $G=w\rightarrow A)$\\
 	 $A$ wird im ersten Schritt markiert und $\beta(A)=1$ ist ein Modell von
 	 $G$.
 	 \item[2. Fall:] Es sei $G=A_1\wedge\ldots\wedge A_n \rightarrow B$ und
@@ -870,9 +870,9 @@ F \models G & \Leftrightarrow & \bigwedge_\beta(I_\beta(F) \leq I_\beta(G))\\
 
 \begin{fakt}
 \begin{eqnarray*}
-F [GNA] G & \Leftrightarrow & (F \models G \textrm{ und } G \models F)\\
+F \semaeq G & \Leftrightarrow & (F \models G \textrm{ und } G \models F)\\
 % Beweis
-F [GNA] G & \Leftrightarrow & \bigwedge_\beta(I_\beta(F)=I_\beta(G))\\
+F \semaeq G & \Leftrightarrow & \bigwedge_\beta(I_\beta(F)=I_\beta(G))\\
 & \Leftrightarrow & \bigwedge_\beta(I_\beta(F) \leq I_\beta(G) \textrm{ und }
 I_\beta(G) \leq I_\beta(F))\\
 & \Leftrightarrow & F \models G \textrm{ und } G \models F
@@ -885,7 +885,7 @@ Es gilt:
    \item[a] $F \models G \Leftrightarrow  (F \rightarrow G) \in TAUT
    \Leftrightarrow \neg(F \rightarrow G)\in \overline{SAT} \Leftrightarrow
    (F\wedge \neg G) \in \overline{SAT}$
-   \item[b] $F [GNA] G \Leftrightarrow (F\leftrightarrow G) \in TAUT
+   \item[b] $F \semaeq G \Leftrightarrow (F\leftrightarrow G) \in TAUT
    \Leftrightarrow \neg (F\leftrightarrow G)\in \overline{SAT}$
    \item[c] $F \in TAUT \Leftrightarrow \neg F \in \overline{SAT}$
    \item[d] $F \in SAT \Leftrightarrow \neg F \notin \overline{SAT}$
