* Einige Schreibfehler korrigiert
* den Link für Versionsverwaltung bei Wikipedia ergänzt

* die neuen Skript (Ana 1, Ana 2, EWMS, DML 2) ergänzt


git-svn-id: https://svn.lug-jena.de/uni-skripte@126 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/skripte/README
+++ b/skripte/README
@@ -1,5 +1,5 @@
 Ich habe mittlerweile von vielen Vorlesungen meine Mitschriften
-"digitalisiert". Einige sind zur zu Teilen, andere sind vollständig aber
+"digitalisiert". Einige sind nur zu Teilen, andere sind vollständig aber
 dafür sind noch Probleme beim Übersetzen. Aber das alles soll auch nur
 ein Anfang sein. Ich hoffe, dass sich weitere Studenten finden und die
 Skripte verbessern, sei es in Bezug auf den Inhalt, Vollständigkeit oder
@@ -10,10 +10,11 @@ rechtschreibtechnisch.
 
 Da jedes Skript in nur einer Datei ist, gestaltet es sich schwierig,
 Änderungen von verschiedenen Benutzern von Hand einzupflegen. Für diese
-Aufgabe hat man sogenannte Versions-Managment-Programme (Link nach
-Wikipedia) entwickelt, die sich darum kümmern, dass Änderungen zweier
-Benutzer nicht im Konflikt zueinander stehen oder dass alle Benutzer auch
-die Änderungen der anderen Benutzer erhalten.
+Aufgabe hat man sogenannte Versions-Managment-Programme
+(http://de.wikipedia.org/wiki/Versionsverwaltung) entwickelt, die sich
+darum kümmern, dass Änderungen zweier Benutzer nicht im Konflikt
+zueinander stehen oder dass alle Benutzer auch die Änderungen der anderen
+Benutzer erhalten.
 
 Diese Programme schützen natürlich nicht vor Sabotage oder davor neue
 Fehler in die Dokumente einzupflegen (es wäre zu schön, wenn ein Programm
@@ -46,11 +47,15 @@ Unwissender hat, nicht sehe.)
 Im folgenden ist SKRIPT der Name eines der Projekte für das jeweilige
 Vorlesungsskript. Zur Zeit gibt es die folgenden:
 
+* Analysis 1, Prof. Dr. Bernd Carl: carl-ana1
+* Analysis 2, Prof. Dr. Bernd Carl: carl-ana2
 * Maß und Integral, Prof. Dr. Hans-Jürgen Engelbert: engelbert-mass-integral
 * Kommunikationssysteme, Prof. Dr. Werner Erhard: erhard-komm-sys
+* EWMS, Prof. Dr. Karl-Heinz Fichtner: fichtner-ewms
 * Parallelität, Prof. Dr. Hans-Dietrich Hecker: hecker-parallel
 * Formale Sprachen, Dr. Gerhard Lischke: lischke-form-sprachen
 * Höhere Analysis, Prof. Dr. Hans-Jürgen Schmeißer: schmeisser-hoehere-ana
+* DML 2, Dr. Jörg Vogel: vogel-dml2
 * Informatik 4, Dr. Jörg Vogel: vogel-info4
 * Mathematik für Informatiker 3 (Wahrscheinlichkeitstheorie), Prof. Dr. Linde: linde-stochastik
 * Das allgemeine Projekt für alle Skript: skripte
