--- a/fichtner-ewms/skript.latex
+++ b/fichtner-ewms/skript.latex
@@ -1,5 +1,3 @@
-% $Id: EWMS.tex 60 2005-08-18 12:31:23Z jens $
-
 % TODO
 % This document ist work in progress. I expect it to be stable at the
 % end of August 2005
@@ -52,6 +50,11 @@
 \makeindex
 
 \begin{document}
+\title{Elementare Wahrscheinlichkeitstheorie und Mathematische Statistik
+  \thanks{$LastChangedRevision$ vom $LastChangedDate$}}
+\author{Prof.\,Dr.\,Karl-Heinz Fichtner}
+\date{WS 2004}
+
 \tableofcontents
 
 \chapter{Maﬂ- und allgemeine Integrationstheorie}
