* Den Dokumententitel um die SVN-Version erweitert und den Autor Prof.   Carl gesetzt, da er der Dozent der Vorlesung ist.
* propset 'svn:keywords' 'LastChangedRevision LastChangedDate' skript.latex


git-svn-id: https://svn.lug-jena.de/uni-skripte@128 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana1/skript.latex
+++ b/carl-ana1/skript.latex
@@ -37,8 +37,10 @@
 \makeindex
 
 \begin{document}
-\title{Vorlesungsskript zu Analysis I}
-\author{Jens Kubieziel}
+\title{Vorlesungsskript zu Analysis I
+  \thanks{$LastChangedRevision$ vom $LastChangedDate$}}
+\author{Prof.\,Dr.\,Bernd Carl}
+\date{WS 2003}
 
 \maketitle
 \tableofcontents{}
@@ -184,12 +186,11 @@ In $\R$ gibt es eine ``Kleinerbeziehung'' $<$ mit folgenden Eigenschaften:
 
 \subsubsection{Absoluter Betrag}
 \[
-a \in \R \quad |a| := \left\{
-\begin{array}{cl}
+a \in \R \quad |a| :=
+\begin{cases}
   a & \text{falls} \ a \geq 0 \\
   -a & \text{falls} \ a<0
-\end{array}
-\right.
+\end{cases}
 \]
 $|a|$ heisst \emph{absoluter Betrag\index{Betrag!absoluter}} (Betrag\index{Betrag}) von $a$.
 
